# ap_bot

./: .eslintrc.cjs  .gitignore  env.example  eslint.config.nextjs.cjs  guide.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  status.md  tsconfig.base.json  tsconfig.eslint.json  turbo.json
.cursor/: rules.md
.github/workflows/: ci.yml  deploy.yml  migrate.yml
apps/admin-lite/: .eslintrc.cjs  next.config.mjs  package.json  playwright.config.ts  status.md  tailwind.config.js  tsconfig.json  vitest.config.ts
apps/admin-lite/src/app/: globals.css  layout.tsx  page.tsx
apps/admin-lite/src/components/: KaTeXRenderer.tsx  ResolveForm.tsx  ReviewCaseDetail.tsx  ReviewCaseList.tsx  ReviewFilters.tsx  RoleGuard.tsx
apps/admin-lite/src/lib/: api.ts
apps/admin-lite/src/test/: setup.ts
apps/admin-lite/tests/e2e/: review-detail.spec.ts  review.spec.ts
apps/api-gateway/: openapi.yaml  package.json  tsconfig.json  vitest.config.ts
apps/api-gateway/openapi/: openapi.json  openapi.yaml
apps/api-gateway/scripts/: generate-openapi.ts
apps/api-gateway/src/: server.ts
apps/api-gateway/src/plugins/: rateLimit.ts  rawBody.ts  security.ts
apps/api-gateway/tests/: plugins.test.ts  questionGuard.test.ts  routes.test.ts  server.test.ts
apps/web/: .eslintrc.cjs  next.config.mjs  package.json  playwright.config.ts  playwright.visual.config.ts  status.md  tailwind.config.js  tsconfig.json  vitest.config.ts  vitest.setup.ts
apps/web/.storybook/: main.ts  preview.ts  preview.tsx
apps/web/scripts/: serve-storybook.mjs  start-visual-storybook.mjs
docs/: README.md
docs/architecture/adr/: ADR-0001-calc-only.md
docs/runbooks/: ingest.md  quality-gates.md  roles.md  storybook.md
py/processor/: README.md  pyproject.toml  test.txt
py/processor/src/processor/: __init__.py  cli.py  embeddings.py  ingest.py  paraphrase.py  supabase_io.py  tagging.py
py/processor/src/processor/tests/: __init__.py  test_cli.py  test_embeddings.py  test_ingest.py  test_paraphrase.py  test_supabase_io.py  test_tagging.py
py/verifier/: Dockerfile  README.md  pyproject.toml
py/verifier/src/verifier/: __init__.py  app.py  calculus.py
py/verifier/src/verifier/tests/: test_app.py  test_app_fixed.py  test_calculus.py  test_calculus_fixed.py
supabase/: README.md  config.toml
supabase/migrations/: 0001_init_core.sql  0002_ab_bc_variant.sql  0003_canonical.sql  0004_webhook_event.sql  0005_review_hitl.sql  0006_analytics_event.sql  0007_seeds_calc.sql
supabase/seeds/calc/: canonical_min.yaml
tests/qa-harness/: README.md  package.json  vitest.config.ts
tests/qa-harness/data/: traps.jsonl
tests/qa-harness/src/: generate-golden.test.ts  generate-golden.ts  generate-traps.test.ts  generate-traps.ts  report.test.ts  report.ts  runner.test.ts  runner.ts
tests/rls/: package.json  tsconfig.json  vitest.config.ts  vitest.setup.ts
tests/rls/src/: rls.spec.ts
(+88 files in other folders)
