[tool.poetry]
name = "ap-processor"
version = "0.1.0"
description = "AP Calculus content processor for ingestion, paraphrasing, tagging, and embedding"
authors = ["AP Bot Team"]
packages = [{include = "processor", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.0"
openai = "^1.3.0"
supabase = "^2.0.0"
pypdf2 = "^3.0.1"
pdfplumber = "^0.10.0"
beautifulsoup4 = "^4.12.0"
lxml = "^4.9.0"
numpy = "^1.25.0"
tiktoken = "^0.5.0"
tenacity = "^8.2.0"
click = "^8.1.0"
rich = "^13.7.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.12.0"
httpx = "^0.25.2"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.0"
responses = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["src/processor/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
